<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".ActivityGoal">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="88dp"
        android:layout_height="44dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="628dp"
        android:onClick="onClBack"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="14sp"
        app:backgroundTint="#A9CFCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="305dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnToAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onCl"
            android:text="@string/addnewgoal"
            android:textColor="#000000"
            android:textSize="24sp"
            app:backgroundTint="#BACFEF" />

        <Button
            android:id="@+id/btnToViewChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onCl4"
            android:text="@string/viewgoals"
            android:textColor="#000000"
            android:textSize="24sp"
            app:backgroundTint="#BACFEF" />

        <Button
            android:id="@+id/btnChronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onCl5"
            android:text="@string/stopwatch"
            android:textColor="#000000"
            android:textSize="24sp"
            app:backgroundTint="#BACFEF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>