<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".ActivityWorkout">


    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="305dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnToViewWorkouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onCl2"
            android:text="@string/viewWorkouts"
            android:textColor="#000000"
            android:textSize="24sp"
            app:backgroundTint="#BACFEF" />

        <Button
            android:id="@+id/btnToAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onCl"
            android:text="@string/addnewchart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:backgroundTint="#BACFEF" />

        <Button
            android:id="@+id/btnToViewChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCl4"
            android:text="@string/mychart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:backgroundTint="#BACFEF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>