<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg10"
    tools:context=".ActivityAddGoal">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="261dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/addnewgoal"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#B61A1A"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@color/purple_200"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/status"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/viewNote"
        android:layout_width="210dp"
        android:layout_height="176dp"
        android:background="#9EFFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/viewStatus"
        app:layout_constraintStart_toStartOf="@+id/viewStatus" />

    <Button
        android:id="@+id/btnAddGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#A2A3A5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewNote"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNote"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/end"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/viewEndTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/viewStartTime"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#9EFFFFFF"
        android:ems="10"
        android:inputType="time"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@+id/viewDate"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/viewDate" />

    <EditText
        android:id="@+id/viewDate"
        style="?android:spinnerStyle"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="#9EFFFFFF"
        android:ems="10"
        android:inputType="date"
        android:onClick="openDatePicker"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/viewEndTime"
        style="?android:spinnerStyle"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:background="#9EFFFFFF"
        android:ems="10"
        android:inputType="time"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/viewStartTime"
        app:layout_constraintStart_toStartOf="@+id/viewStartTime" />

    <Button
        android:id="@+id/btnResetGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="onCl3"
        android:text="@string/reset"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#A2A3A5"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAddGoal"
        app:layout_constraintEnd_toStartOf="@+id/btnAddGoal"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/viewStatus"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:background="#9EFFFFFF"
        android:ems="10"
        android:padding="10dp"
        android:entries="@array/status_array"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/viewEndTime"
        app:layout_constraintStart_toStartOf="@+id/viewEndTime" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/note"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="628dp"
        android:onClick="onCl"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="14sp"
        app:backgroundTint="#A9CFCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="457dp"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>